--- a/index.html
+++ b/index.html
@@ -129,7 +129,9 @@
             <br>
             En todos los caso debe quedar correctamente nivelado y con el visor hacia el frente.
             <br>
-            <b>Sala de medirores</b>
+            <br>
+            <b><u>Sala de medidores</u></b>
+            <br>
             <br>
             Debe tener como mínimo una rejilla de ventilación de 100cm2 superior e inferior hasta 10 medidores y una rejilla de 20x40cm (800cm2) superior e inferior entre 10 y 80 medidores.
             <br>
@@ -179,7 +181,8 @@
           <div class="accordion-body">
             Se considera cañería interna al armado del conjunto de caños y accesorios que corre desde la conexión de la salida del medidor hasta las llaves de paso de los artefactos inclusive.
             <br>
-            <ul><b>Condiciones reglamentarias:</b>
+            <b>Condiciones reglamentarias:</b>
+            <ul>
                 <li>Siempre correrán por lugares comunes y dentro del lote propio.</li>
                 <li>No se pueden ejecutar con diámtros inferiores a 1/2".</li>
                 <li>No podrán estar en contacto con conductores eléctricos, albañales o caños de agua.</li>
@@ -248,12 +251,13 @@
             <br> 
             Los termotanques con salida horizontal no pueden salir con un codo, deben tener como mínimo 0.30cm y como máximo 1m horizontal, a continuación, el tramo vertical debe ser 4 veces la longitud del tramo horizontal si remata a 3 vientos y 1.5 veces el horizontal si remata a los 4 vientos.
             <br> 
-            <b>Puntos para observar</b>
+            <br>
+            <b>Puntos para observar:</b>
             <ul>
                 <li>Verificar que el artefacto se encuentre amurado, que tenga válvula de seguridad(calefones antiguos, estufas en paso), la llave accesible y que no supere los 50cm de caño de cobre/aluminio de la conexión.</li>
                 <li>El conducto deberá ser de material liso(chapa galvanizada), estanco y sellado.</li>
                 <li>Están prohibidos los conductos corrugados de aluminio.</li>
-                <li>Para artefactos de hasta 10000Kcal el conducto debe ir a 3 vientos.<li>
+                <li>Para artefactos de hasta 10000Kcal el conducto debe ir a 3 vientos.
                 <li>Para artefactos que superen las 10000Kcal el conducto debe ir a los 4 vientos.</li>
             </ul>
             <br>
@@ -329,6 +333,19 @@
         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/vTvd37mZiuM?start=17" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
        </div>
     </div>
+    <div class="accordion-item">
+        <h2 class="accordion-header" id="headingNine">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
+           Calculo de prolongaciones 
+          </button>
+        </h2>
+        <div id="collapseNine" class="accordion-collapse collapse" aria-labelledby="headingNine" data-bs-parent="#accordionExample">
+          <div class="accordion-body embed-responsive embed-responsive-16by9 container">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/4l5JPQ5rfwY?start=52" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </div>
+
+
     <!-- <div class="accordion-item">
         <h2 class="accordion-header" id="headingSix">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
