--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingTen">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTen" aria-expanded="false" aria-controls="collapseTen">
-       Códigos de Rechazo 
+       Códigos de Rechazo <p class="new">nuevo</p>
       </button>
     </h2>
     <div id="collapseTen" class="accordion-collapse collapse" aria-labelledby="headingTen" data-bs-parent="#accordionExample">
