Prueba correccion buscador

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             <b>Artefacto de cámara estanca(tiro balanceado)</b>
             <br>
             Son los que toman el oxígeno del exterior y expulsan los gases de la combustión al exteriror por el conducto. No necesitan rejillas de ventilación.
-            <img src="./img/construccion.png"  class="img-fluid mt-2 mb-2"> 
+          
         </div>         
   <div class="accordion" id="accordionExample">
     <div class="accordion-item">
@@ -341,7 +341,7 @@
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingTen">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTen" aria-expanded="false" aria-controls="collapseTen">
-       Códigos de Rechazo <p class="new">nuevo</p>
+       Códigos de Rechazo 
       </button>
     </h2>
     <div id="collapseTen" class="accordion-collapse collapse" aria-labelledby="headingTen" data-bs-parent="#accordionExample">
@@ -655,7 +655,7 @@
               <td class="articulo"><b>3601</b> - Instalar en nichos calefones no aprobados para ese fin</td>
             </tr>
             <tr>
-              <td class="articulo"><b>3651</b> - Artefactos que no estan rigidamente instaalados</td>
+              <td class="articulo"><b>3651</b> - Artefactos que no estan rigidamente instalados</td>
             </tr>
             <tr>
               <td class="articulo"><b>3701</b> - Colocar estufa de tiro balanceado junto a ventana</td>
