Correccion solapa rvs

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             <b>Artefacto de cámara estanca(tiro balanceado)</b>
             <br>
             Son los que toman el oxígeno del exterior y expulsan los gases de la combustión al exteriror por el conducto. No necesitan rejillas de ventilación.
-          
+       </div>   
         </div>         
   <div class="accordion" id="accordionExample">
     <div class="accordion-item">
